# gitz

./: CMakeLists.txt  GitzFrame.h  gitz.cpp  gitz.rc  wx.h
src/: Commit.cpp  Commit.h  GitzApp.cpp  GitzApp.h  GitzFrame.cpp  Repository.h  git-icon.xpm
src/qt/: CMakeLists.txt  gitz.cpp  gitz.qrc
src/windows/: .editorconfig  .gitignore  Gitz.sln
src/windows/Gitz.Shared/: Gitz.Shared.cpp  Gitz.Shared.vcxproj  Gitz.Shared.vcxproj.filters
src/windows/Gitz/Gitz/: App.cpp  App.h  App.idl  App.xaml  Gitz.vcxproj  Gitz_TemporaryKey.pfx  MainWindow.cpp  MainWindow.h  MainWindow.idl  MainWindow.xaml  app.manifest  packages.config  readme.txt
src/windows/Gitz/Gitz (Package)/: Gitz (Package).wapproj  Package.appxmanifest
src/wx/: CMakeLists.txt  GitzApp.cpp  GitzFrame.cpp  gitz.cpp  gitz.rc  wx.h
